--- a/acess/view/css/style.css
+++ b/acess/view/css/style.css
@@ -1,14 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     font-family: 'Open Sans', sans-serif;
 }
-
 .container {
     display: flex;
     justify-content: center;
@@ -16,7 +14,6 @@ body {
     height: 100vh;
     background-color: #ecf0f1;
 }
-
 .content {
     background-color: #fff;
     border-radius: 15px;
@@ -26,34 +23,40 @@ body {
     align-items: center;
     position: relative;
 }
-
 .content::before {
-    content: '';
+    content: "";
     position: absolute;
-    background-color: #94EBB7;
+    background-color: #58af9b;
     width: 40%;
     height: 100%;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
-}
 
+
+    left: 0;
+}
 .title {
     font-size: 28px;
     font-weight: bold;
     text-transform: capitalize;
 }
-
 .title-primary {
     color: #fff;
 }
-
+.title-second {
+    color: #58af9b;
+}
 .description {
     font-size: 14px;
-    font-weight: 300px;
-    color: #fff;
+    font-weight: 300;
     line-height: 30px;
 }
-
+.description-primary {
+    color: #fff;
+}
+.description-second {
+    color: #7f8c8d;
+}
 .btn {
     border-radius: 15px;
     text-transform: uppercase;
@@ -62,42 +65,116 @@ body {
     padding: 10px 50px;
     cursor: pointer;
     font-weight: bold;
+    width: 150px;
+    align-self: center;
+    border: none;
+    margin-top: 1rem;
 }
-
 .btn-primary {
     background-color: transparent;
     border: 1px solid #fff;
+    transition: background-color .5s;
 }
-
 .btn-primary:hover {
     background-color: #fff;
-    color: #94EBB7;
+    color: #58af9b;
 }
-
+.btn-second {
+    background-color: #58af9b;
+    border: 1px solid #58af9b;
+    transition: background-color .5s;
+}
+.btn-second:hover {
+    background-color: #fff;
+    border: 1px solid #58af9b;
+    color: #58af9b;
+}
 .first-content {
     display: flex;
 }
-
+.first-content .second-column {
+    z-index: 11;
+}
 .first-column {
     text-align: center;
-    flex: 1 0 auto;
+    width: 40%;
     z-index: 10;
 }
-
 .second-column {
-    flex: 2 0 auto;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
+.social-media {
+    margin: 1rem 0;
+}
+.link-social-media:not(:first-child){
+    margin-left: 10px;
+}
+.link-social-media .item-social-media {
+    transition: background-color .5s;
+}
+.link-social-media:hover .item-social-media{
+    background-color: #58af9b;
+    color: #fff;
+    border-color: #58af9b;
+}
 .list-social-media {
     display: flex;
+    list-style-type: none;
 }
-
+.item-social-media {
+    border: 1px solid #bdc3c7;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    color: #95a5a6;
+}
 .form {
     display: flex;
     flex-direction: column;
+    width: 55%;
 }
+.form input {
+    height: 45px;
+    width: 100%;
+    border: none;
+    background-color: #ecf0f1;
+}
+.label-input {
+    background-color: #ecf0f1;
+    display: flex;
+    align-items: center;
+    margin: 8px;
+}
+.icon-modify {
+    color: #7f8c8d;
+    padding: 0 5px;
+}
+
+/* second content*/
 
 .second-content {
     position: absolute;
-    display: none;
+    display: flex;
+}
+.second-content .first-column {
+    order: 2;
+    z-index: -1;
+}
+.second-content .second-column {
+    order: 1;
+    z-index: -1;
+}
+.password {
+    color: #34495e;
+    font-size: 14px;
+    margin: 15px 0;
+    text-align: center;
+}
+.password::first-letter {
+    text-transform: capitalize;
 }
