--- a/acess/view/index.html
+++ b/acess/view/index.html
@@ -15,10 +15,10 @@
         <!--First content-->
         <div class="content first-content">
              <div class="first-column">
-                <h2 class="title-primary">Bem vindo devolta!</h2>
+                <h2 class="title title-primary">Bem vindo devolta!</h2>
                 <p class="description description-primary">Se mantenha conectado</p>
                 <p class="description description-primary">Por favor acesse com suas informações pessoais</p>
-                <button class="btn btn-primary">Entrar</button>
+                <button id="signin" class="btn btn-primary">Entrar</button>
              </div>
              <div class="second-column">
                 <h2 class="title title-second">Crie uma conta</h2>
@@ -33,15 +33,15 @@
                 </div>
                 <p class="description description-second">Ou use seu email para se registrar:</p>
                 <form class="form">
-                    <label class="label-input">
+                    <label class="label-input" for="">
                         <i class="fa-solid fa-user icon-modify"></i>
                         <input type="text" placeholder="Nome">
                     </label>
-                    <label class="label-input">
+                    <label class="label-input" for="">
                         <i class="fa-solid fa-envelope icon-modify"></i>
                         <input type="email" placeholder="Email">
                     </label>
-                    <label class="label-input">
+                    <label class="label-input" for=""> 
                         <i class="fa-solid fa-lock icon-modify"></i>
                         <input type="password" placeholder="Senha">
                     </label>
@@ -52,12 +52,12 @@
 
         <!--Second content-->
 
-        <div class="second-content">
+        <div class="content second-content">
             <div class="first-column">
-                <h2 class="title title-primary">Olá, amigo</h2>
+                <h2 class="title title-primary">Olá amigo</h2>
                 <p class="description description-primary">Insira seus dados pessoais</p>
                 <p class="description description-primary">Inicie sua jornada conosco</p>
-                <button class="btn btn-primary">Entrar</button>
+                <button id="signup" class="btn btn-primary">Entrar</button>
             </div>
              <div class="second-column">
                 <h2 class="title title-second">Acesse sua conta</h2>
@@ -72,22 +72,22 @@
                 </div>
                 <p class="description description-second">Ou use seu email para acessar:</p>
                 <form class="form">
-                    <label class="label-input">
+                    <label class="label-input" for="">
                         <i class="fa-solid fa-envelope icon-modify"></i>
                         <input type="email" placeholder="Email">
                     </label>
-                    <label class="label-input">
+                    <label class="label-input" for="">
                         <i class="fa-solid fa-lock icon-modify"></i>
                         <input type="password" placeholder="Senha">
                     </label>
 
-                    <a class="password" href="">Esqueceu a senha?</a>
+                    <a class="password" href="#">Esqueceu a senha?</a>
                     <button class="btn btn-second">Cadastrar</button>
                 </form>
              </div><!--Second column-->
         </div>
         <!--End Second content-->
     </div>
+    <script src="/acess/view/js/acess.js"></script>
 </body>
-
 </html>
