--- a/acess/view/css/style.css
+++ b/acess/view/css/style.css
@@ -4,9 +4,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     font-family: 'Open Sans', sans-serif;
 }
+
 .container {
     display: flex;
     justify-content: center;
@@ -24,40 +26,46 @@ body {
     align-items: center;
     position: relative;
 }
+
 .content::before {
     content: "";
     position: absolute;
-    background-color: #58af9b;
+    background-color: #059481;
     width: 40%;
     height: 100%;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
-
-
     left: 0;
 }
+
 .title {
     font-size: 28px;
     font-weight: bold;
     text-transform: capitalize;
 }
+
 .title-primary {
     color: #fff;
 }
+
 .title-second {
-    color: #58af9b;
+    color: #059481;
 }
+
 .description {
     font-size: 14px;
     font-weight: 300;
     line-height: 30px;
 }
+
 .description-primary {
     color: #fff;
 }
+
 .description-second {
     color: #7f8c8d;
 }
+
 .btn {
     border-radius: 15px;
     text-transform: uppercase;
@@ -71,60 +79,74 @@ body {
     border: none;
     margin-top: 1rem;
 }
+
 .btn-primary {
     background-color: transparent;
     border: 1px solid #fff;
     transition: background-color .5s;
 }
+
 .btn-primary:hover {
     background-color: #fff;
-    color: #58af9b;
+    color: #059481;
 }
+
 .btn-second {
-    background-color: #58af9b;
-    border: 1px solid #58af9b;
+    background-color: #059481;
+    border: 1px solid #059481;
     transition: background-color .5s;
 }
+
 .btn-second:hover {
     background-color: #fff;
-    border: 1px solid #58af9b;
-    color: #58af9b;
+    border: 1px solid #059481;
+    color: #059481;
 }
+
 .first-content {
     display: flex;
 }
+
 .first-content .second-column {
     z-index: 11;
 }
+
 .first-column {
     text-align: center;
     width: 40%;
     z-index: 10;
 }
+
 .second-column {
     width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .social-media {
     margin: 1rem 0;
 }
-.link-social-media:not(:first-child){
+
+.link-social-media:not(:first-child) {
     margin-left: 10px;
 }
+
 .link-social-media .item-social-media {
     transition: background-color .5s;
 }
-.link-social-media:hover .item-social-media{
-    background-color: #58af9b;
+
+.link-social-media:hover .item-social-media {
+    background-color: #059481;
     color: #fff;
-    border-color: #58af9b;
+    border-color: #059481;
 }
+
 .list-social-media {
     display: flex;
     list-style-type: none;
 }
+
 .item-social-media {
     border: 1px solid #bdc3c7;
     border-radius: 50%;
@@ -134,32 +156,37 @@ body {
     text-align: center;
     color: #95a5a6;
 }
+
 .form {
     display: flex;
     flex-direction: column;
     width: 55%;
 }
+
 .form input {
     height: 45px;
     width: 100%;
     border: none;
     background-color: #ecf0f1;
 }
-input:-webkit-autofill 
-{    
+
+input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px #ecf0f1 inset !important;
     -webkit-text-fill-color: #000 !important;
 }
+
 .label-input {
     background-color: #ecf0f1;
     display: flex;
     align-items: center;
     margin: 8px;
 }
+
 .icon-modify {
     color: #7f8c8d;
     padding: 0 5px;
 }
+
 
 /* second content*/
 
@@ -167,20 +194,24 @@ input:-webkit-autofill
     position: absolute;
     display: flex;
 }
+
 .second-content .first-column {
     order: 2;
     z-index: -1;
 }
+
 .second-content .second-column {
     order: 1;
     z-index: -1;
 }
+
 .password {
     color: #34495e;
     font-size: 14px;
     margin: 15px 0;
     text-align: center;
 }
+
 .password::first-letter {
     text-transform: capitalize;
 }
@@ -192,6 +223,7 @@ input:-webkit-autofill
 .sign-in-js .second-content .second-column {
     z-index: 11;
 }
+
 .sign-in-js .second-content .first-column {
     z-index: 13;
 }
@@ -202,14 +234,14 @@ input:-webkit-autofill
     border-bottom-left-radius: 0;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    animation: slidein 1.3s; /*MODIFIQUEI DE 3s PARA 1.3s*/
-
+    animation: slidein 1.3s;
+    /*MODIFIQUEI DE 3s PARA 1.3s*/
     z-index: 12;
 }
 
 .sign-up-js .content::before {
-    animation: slideout 1.3s; /*MODIFIQUEI DE 3s PARA 1.3s*/
-
+    animation: slideout 1.3s;
+    /*MODIFIQUEI DE 3s PARA 1.3s*/
     z-index: 12;
 }
 
@@ -223,46 +255,45 @@ input:-webkit-autofill
 }
 
 .sign-up-js .first-content .first-column {
-    z-index: 13;    
+    z-index: 13;
 }
 
 
 /* DESLOCAMENTO CONTEÚDO ATRÁS DO CONTENT:BEFORE*/
-.sign-in-js .first-content .second-column {
 
+.sign-in-js .first-content .second-column {
     z-index: -1;
     position: relative;
-    animation: deslocamentoEsq 1.3s; /*MODIFIQUEI DE 3s PARA 1.3s*/
+    animation: deslocamentoEsq 1.3s;
+    /*MODIFIQUEI DE 3s PARA 1.3s*/
 }
 
 .sign-up-js .second-content .second-column {
     position: relative;
     z-index: -1;
-    animation: deslocamentoDir 1.3s; /*MODIFIQUEI DE 3s PARA 1.3s*/
+    animation: deslocamentoDir 1.3s;
+    /*MODIFIQUEI DE 3s PARA 1.3s*/
 }
+
 
 /*ANIMAÇÃOO CSS PARA O CONTEÚDO*/
 
 @keyframes deslocamentoEsq {
-
     from {
         left: 0;
         opacity: 1;
         z-index: 12;
     }
-
     25% {
         left: -80px;
         opacity: .5;
         /* z-index: 12; NÃO HÁ NECESSIDADE */
     }
-
     50% {
         left: -100px;
         opacity: .2;
         /* z-index: 12; NÃO HÁ NECESSIDADE */
     }
-
     to {
         left: -110px;
         opacity: 0;
@@ -270,25 +301,20 @@ input:-webkit-autofill
     }
 }
 
-
 @keyframes deslocamentoDir {
-
     from {
         left: 0;
         z-index: 12;
     }
-
     25% {
         left: 80px;
         /* z-index: 12;  NÃO HÁ NECESSIDADE*/
     }
-
     50% {
         left: 100px;
         /* z-index: 12; NÃO HÁ NECESSIDADE*/
         /* background-color: yellow;  Exemplo que dei no vídeo*/
     }
-
     to {
         left: 110px;
         z-index: -1;
@@ -299,27 +325,22 @@ input:-webkit-autofill
 /*ANIMAÇÃO CSS*/
 
 @keyframes slidein {
-
     from {
         left: 0;
         width: 40%;
     }
-
     25% {
         left: 5%;
         width: 50%;
     }
-
     50% {
         left: 25%;
         width: 60%;
     }
-
     75% {
         left: 45%;
         width: 50%;
     }
-
     to {
         left: 60%;
         width: 40%;
@@ -327,178 +348,145 @@ input:-webkit-autofill
 }
 
 @keyframes slideout {
-
     from {
         left: 60%;
         width: 40%;
     }
-
     25% {
         left: 45%;
         width: 50%;
     }
-
     50% {
         left: 25%;
         width: 60%;
     }
-
     75% {
         left: 5%;
         width: 50%;
     }
-
     to {
         left: 0;
         width: 40%;
     }
 }
 
+
 /*VERSÃO MOBILE*/
+
 @media screen and (max-width: 1040px) {
     .content {
         width: 100%;
         height: 100%;
     }
-
     .content::before {
         width: 100%;
         height: 40%;
         top: 0;
         border-radius: 0;
     }
-    .first-content, .second-content {
+    .first-content,
+    .second-content {
         flex-direction: column;
         justify-content: space-around;
     }
-
-    .first-column, .second-column {
+    .first-column,
+    .second-column {
         width: 100%;
     }
-    
     .sign-in-js .content::before {
         top: 60%;
         left: 0;
         border-radius: 0;
-
     }
-
     .form {
         width: 90%;
     }
-    
     /* ANIMAÇÃO MOBILE CSS*/
-
     @keyframes deslocamentoEsq {
-
         from {
             top: 0;
             opacity: 1;
             z-index: 12;
         }
-    
         25% {
             top: -80px;
             opacity: .5;
             /* z-index: 12; NÃO HÁ NECESSIDADE */
         }
-    
         50% {
             top: -100px;
             opacity: .2;
             /* z-index: 12; NÃO HÁ NECESSIDADE */
         }
-    
         to {
             top: -110px;
             opacity: 0;
             z-index: -1;
         }
     }
-    
-    
     @keyframes deslocamentoDir {
-    
         from {
             top: 0;
             z-index: 12;
         }
-    
         25% {
             top: 80px;
             /* z-index: 12;  NÃO HÁ NECESSIDADE*/
         }
-    
         50% {
             top: 100px;
             /* z-index: 12; NÃO HÁ NECESSIDADE*/
             /* background-color: yellow;  Exemplo que dei no vídeo*/
         }
-    
         to {
             top: 110px;
             z-index: -1;
         }
     }
-    
-    
-    
     @keyframes slidein {
-    
         from {
             top: 0;
             height: 40%;
         }
-    
         25% {
             top: 5%;
             height: 50%;
         }
-    
         50% {
             top: 25%;
             height: 60%;
         }
-    
         75% {
             top: 45%;
             height: 50%;
         }
-    
         to {
             top: 60%;
             height: 40%;
         }
     }
-    
     @keyframes slideout {
-    
         from {
             top: 60%;
             height: 40%;
         }
-    
         25% {
             top: 45%;
             height: 50%;
         }
-    
         50% {
             top: 25%;
             height: 60%;
         }
-    
         75% {
             top: 5%;
             height: 50%;
         }
-    
         to {
             top: 0;
             height: 40%;
         }
     }
-   
 }
 
 @media screen and (max-width: 740px) {
