--- a/stylehome.css
+++ b/stylehome.css
@@ -729,3 +729,61 @@
             font-size: 27px;
         }
     }
+
+    .modal-container {
+        width: 100vw;
+        height: 100vw;
+        background: rgba(0,0,0,.5);
+        position: fixed;
+        top: 0px;
+        left: 0px;
+        z-index: 2000;
+        display: none;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .modal-container.mostrar {
+        display: flex;
+    }
+
+    .modal {
+        background: white;
+        width: 60%;
+        min-width: 300px;
+        padding: 40 px;
+        border: 10px solid #059481;
+        box-shadow: 0 0 0 10px white;
+        position: relative;
+    }
+
+    @keyframes modal {
+        from {
+            opacity: 0;
+            transform: translate3d(0, -60px, 0);
+        }
+        to {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+        }
+    }
+
+    .mostrar .modal {
+        animation: modal .3s;
+    }
+
+    .fechar {
+        position: absolute;
+        font-size: 1.2em;
+        top: -30px;
+        right: -30px;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        border: 4px solid white;
+        background: #059481;
+        color: white;
+        font-family: 'Ubuntu', sans-serif, monospace;
+        cursor: pointer;
+        box-shadow: 0 4px 4px 0 rgba(0,0,0,.3);
+    }
