--- a/stylehome.css
+++ b/stylehome.css
@@ -423,6 +423,7 @@
     
     .teams .carousel .card:hover {
         background: #059481;
+        cursor: pointer;
     }
     
     .teams .carousel .card img {
@@ -732,7 +733,7 @@
 
     .modal-container {
         width: 100vw;
-        height: 100vw;
+        height: 100vh;
         background: rgba(0,0,0,.5);
         position: fixed;
         top: 0px;
@@ -751,10 +752,10 @@
         background: white;
         width: 60%;
         min-width: 300px;
-        padding: 40 px;
+        padding: 40px;
         border: 10px solid #059481;
-        box-shadow: 0 0 0 10px white;
         position: relative;
+        border-radius: 15px;
     }
 
     @keyframes modal {
@@ -775,15 +776,15 @@
     .fechar {
         position: absolute;
         font-size: 1.2em;
-        top: -30px;
-        right: -30px;
+        top: 110px;
+        right: 770px;
         width: 50px;
         height: 50px;
         border-radius: 50%;
         border: 4px solid white;
         background: #059481;
         color: white;
-        font-family: 'Ubuntu', sans-serif, monospace;
+        font-family: 'Ubuntu', sans-serif;
         cursor: pointer;
         box-shadow: 0 4px 4px 0 rgba(0,0,0,.3);
     }
