--- a/stylehome.css
+++ b/stylehome.css
@@ -788,3 +788,7 @@
         cursor: pointer;
         box-shadow: 0 4px 4px 0 rgba(0,0,0,.3);
     }
+
+    .nav-link {
+        cursor: pointer;
+    }
