--- a/src/definir-horarios/view/style-horario.css
+++ b/src/definir-horarios/view/style-horario.css
@@ -12,15 +12,16 @@ body {
 .container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
+    height: 130vh;
+    width: 98vw;
     background-color: #fff;
+    position: relative
 }
 
-.content {
+.content-dia {
     width: 100vw;
-    height: 600px;
-    background: #fff;
+    height: 400px;
+    background: #111;
 }
 
 .semana-grid {
@@ -31,95 +32,252 @@ body {
 
 .dia-1 {
     background-color: #059481;
-    border: 1px solid #059481;
+    border: 3px solid #059481;
     color: #fff;
     font-size: 20px;
     border-radius: 15px;
-    text-align: center;
     height: 200px;
     width: 150px;
     position: absolute;
     padding: 36px;
-    top: 70px;
+    top: 120px;
     left: 250px;
     cursor: pointer;
+    transition: .5s;
 }
 
 .dia-2 {
     background-color: #059481;
-    border: 1px solid #059481;
+    border: 3px solid #059481;
     color: #fff;
     font-size: 20px;
     border-radius: 15px;
-    text-align: center;
     height: 200px;
     width: 150px;
     position: absolute;
     padding: 36px;
-    top: 70px;
+    top: 120px;
     left: 425px;
     cursor: pointer;
+    transition: .5s;
 }
 .dia-3 {
     background-color: #059481;
-    border: 1px solid #059481;
+    border: 3px solid #059481;
     color: #fff;
     font-size: 20px;
     border-radius: 15px;
-    text-align: center;
     height: 200px;
     width: 150px;
     position: absolute;
     padding: 36px;
-    top: 70px;
+    top: 120px;
     left: 600px;
     cursor: pointer;
+    transition: .5s;
 }
 .dia-4 {
     background-color: #059481;
-    border: 1px solid #059481;
+    border: 3px solid #059481;
     color: #fff;
     font-size: 20px;
     border-radius: 15px;
-    text-align: center;
     height: 200px;
     width: 150px;
     position: absolute;
     padding: 36px;
-    top: 70px;
+    top: 120px;
     left: 775px;
     cursor: pointer;
+    transition: .5s;
 }
 .dia-5 {
     background-color: #059481;
-    border: 1px solid #059481;
+    border: 3px solid #059481;
     color: #fff;
     font-size: 20px;
     border-radius: 15px;
-    text-align: center;
     height: 200px;
     width: 150px;
     position: absolute;
     padding: 36px;
-    top: 70px;
+    top: 120px;
     left: 950px;
     cursor: pointer;
-}
-
-.text {
-    font-family: 'Roboto', sans-serif;
+    transition: .5s;
 }
 
 .referencia {
-    font-size: 25px;
+    font-family: 'Ubuntu', sans-serif;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
     position: absolute;
-    left: 320px;
-    top: 50px;
-    font-family: 'Roboto', sans-serif;
+    color: #fff;
+    top: 20px;
+}
+
+.referencia::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #fff;
+    transform: translateX(-50%);
+}
+
+.referencia::after {
+    position: absolute;
+    bottom: -12px;
+    left: 50%;
+    font-size: 20px;
+    background: #fff;
+    color: #059481;
+    padding: 5px;
+    transform: translateX(-50%);
 }
 
 .alter:hover {
     color: #059481;
     background: none;
     transform: scale(1.05);
+}
+
+.content-horario {
+    background: #fff;
+    height: 445px;
+    width: 90vw;
+    position: absolute;
+    top: 400px;
+    display: flex;
+}
+
+.horarios-grid {
+    display: grid;
+    row-gap: 0px;
+    grid-template-columns: 400px 400px 400px;
+    grid-template-rows: 100px 100px 100px;
+    justify-items: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
+    position: absolute;
+    top: 75px;
+    left: 29px;
+}
+
+.text {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    text-align: center;
+}
+
+.text-horarioQTD {
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
+    left: 95px;
+    position: absolute;
+    top: 350px;
+    color: #fff;
+}
+
+.text-horarioATD {
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
+    left: 40px;
+    position: absolute;
+    top: 15px;
+}
+
+.field {
+    width: 70px;
+    height: 35px;
+    border: 1px solid #fff;
+    background: none;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 17px;
+    font-family: 'Roboto', sans-serif;
+    position: absolute;
+    top: -1px;
+    left: 720px;
+    cursor: pointer;
+    color: #fff;
+}
+
+.field::placeholder {
+    color: #fff;
+}
+
+.field:active , .field:focus {
+    border: 2px solid #059481;
+    color:#fff;
+    transition: .3s;
+}
+
+.field[type="number"]::-webkit-outer-spin-button,
+.field[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.field[type="number"] {
+    -moz-appearance: textfield;
+}
+
+.horario[type="time"] {
+    width: 120px;
+    height: 50px;
+    border: 2px solid #ccc;
+    border-radius: 6px;
+    outline: none;
+    padding: 0 15px;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+    transition: .8s;
+}
+
+.panel {
+    background-color: #059481;
+    width:375px;
+    height: 70px;
+    border-radius: 6px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    transition: .6s;
+}
+
+.panel:hover {
+    color: #111;
+    background: #fff;
+    border: 3px solid #059481;
+    transform: scale(1.05);
+}
+
+.horario:hover {
+    border: 3px solid #059481;
+    transform: scale(1.05);
+}
+
+.salvar {
+    position: fixed;
+    width: 41px;
+    height: 45px;
+    right: 18px;
+    bottom: 20px;
+    text-align: center;
+    line-height: 50px;
+    color: #fff;
+    background: #059481;
+    border-radius: 6px;
+    font-size: 30px;
+    z-index: 20;
+    cursor: pointer;
+    opacity: 1;
+    transition: all 0.3s ease;
 }
