--- a/src/acess/view/acesso.html
+++ b/src/acess/view/acesso.html
@@ -8,7 +8,7 @@
     <title>KG Agendaca</title>
     <link rel="stylesheet" href="/src/acess/view/css/style.css">
     <link rel="stylesheet" href="/libs/fontawesome/css/all.css">
-    <link rel="shortcut icon" href="/img/LogoAgenda.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/Logo kg .png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
