--- a/src/definir-horarios/view/definir-horarios.html
+++ b/src/definir-horarios/view/definir-horarios.html
@@ -1,9 +1,11 @@
 <link rel="stylesheet" href="/src/definir-horarios/view/style-horario.css">
 <link rel="stylesheet" href="/libs/fontawesome/css/all.css">
+<link rel="icon" href="./img/Logo kg.png" type="image/x-icon">
+<title>Definir horários</title>
 
 <div class="container">
     <div class="salvar">
-        
+        <i class="fa-regular fa-floppy-disk-pen"></i>
     </div>
     <div class="referencia">
         <p>Selecione o dia da semana e edite seus horarios de atendimento</p>
