--- a/stylehome.css
+++ b/stylehome.css
@@ -280,7 +280,7 @@
     .services .title::after,
     .teams .title::after {
         background: #111;
-        content: "Que oferecemos";
+        content: "Oferecidos";
     }
     
     .services .serv-content .card {
