--- a/src/definir-horarios/view/style-horario.css
+++ b/src/definir-horarios/view/style-horario.css
@@ -179,7 +179,7 @@ html {
     font-size: 25px;
     position: absolute;
     top: 75px;
-    left: 29px;
+    left: 18px;
 }
 
 .text {
@@ -200,9 +200,9 @@ html {
 .text-horarioATD {
     font-family: 'Roboto', sans-serif;
     font-size: 25px;
-    left: 40px;
+    left: 35px;
     position: absolute;
-    top: 15px;
+    top: 10px;
 }
 
 .field {
@@ -288,11 +288,46 @@ html {
     color: #fff;
     background: #059481;
     border-radius: 6px;
+    border: 1px solid #059481;
     font-size: 30px;
     z-index: 20;
     cursor: pointer;
     opacity: 1;
     transition: all 0.3s ease;
+}
+
+.voltar {
+    position: fixed;
+    width: 41px;
+    height: 45px;
+    left: 30px;
+    bottom: 20px;
+    text-align: center;
+    line-height: 50px;
+    color: #fff;
+    background: #059481;
+    border-radius: 6px;
+    font-size: 30px;
+    z-index: 20;
+    cursor: pointer;
+    opacity: 1;
+    transition: all 0.3s ease;
+}
+
+.fa-arrow-left {
+    position:absolute;
+    top: 8px;
+    left: 8px;
+}
+
+.fa-floppy-disk {
+    position:absolute;
+    top: 7px;
+    left: 7px;
+}
+
+.link-color {
+    color: #fff;
 }
 /*Final Style*/
 
