--- a/src/agendamento/view/agendamento.html
+++ b/src/agendamento/view/agendamento.html
@@ -25,7 +25,54 @@
             <div class="dados-pessoais">
                 <h2 class="title-dados">Dados Pessoais</h2>
                 <form>
+                    <div>
+                        <label class="text-campo" for="">Nome completo:&nbsp </label>
+                        <input class="campo nome" type="text" placeholder="Nome Completo" required>
+                    </div>
 
+                    <div>
+                        <label class="text-campo" for="">Seu CPF:&nbsp </label>
+                        <input class="campo cpf" type="text" placeholder="CPF" required>
+                    </div>
+
+                    <div>
+                        <label class="text-campo" for="">Data de nascimento:&nbsp </label>
+                        <input class="campo dtNasc" type="date" placeholder="Data de nascimento" required>
+                    </div>
+
+                    <div>
+                        <label class="text-campo" for="">Telefone fixo:&nbsp </label>
+                        <input class="campo telefone" type="text" placeholder="Telefone" required>
+                    </div>
+
+                    <div>
+                        <label class="text-campo" for="">Celular:&nbsp </label>
+                        <input class="campo celular" type="text" placeholder="Número de Celular" required>
+                    </div>
+
+                    <div>
+                        <label class="text-campo" for="">CEP:&nbsp </label>
+                        <input class="campo cep" type="text" placeholder="CEP" required>
+                    </div>
+
+                    <div>
+                        <label class="text-campo" for="">Cidade:&nbsp </label>
+                        <input class="campo cidade" type="text" placeholder="Cidade" required>
+                    </div>
+
+                    <div>
+                        <label class="text-campo" for="">Logradouro:&nbsp </label>
+                        <input class="campo rua" type="text" placeholder="Rua" required>
+                    </div>
+
+                    <div>
+                        <label class="text-campo" for="">Bairro:&nbsp </label>
+                        <input class="campo bairro" type="text" placeholder="Bairro" required>
+                    </div>
+
+                    <button class="agendar">
+                    Finalizar Agendamento
+                    </button>
                 </form>
             </div>
 
