--- a/src/agendamento/view/agendamento.css
+++ b/src/agendamento/view/agendamento.css
@@ -10,16 +10,6 @@
     html {
         scroll-behavior: smooth;
     }
-    
-    .max-width {
-        max-width: 1300px;
-        padding: 0 80px;
-        margin: auto;
-    }
-
-    /* section {
-        padding: 100px 0;
-    } */
 
     .container {
         display: block;
@@ -34,7 +24,7 @@
 
     /*Style Doutores*/
     .doutores {
-        width: 100vw;
+        width: 100%;
         height: 600px;
         background: #059481;
     }
@@ -53,7 +43,7 @@
 
     /*Style Horarios-Doutor*/
     .horarios-doutor { 
-        width: 100vw;
+        width: 100%;
         height: 600px;
         background: #fff;
     }
@@ -72,9 +62,9 @@
 
     /*Style Dados-Pessoais*/
     .dados-pessoais {
-        width: 100vw;
+        width: 100%;
         height: 600px;
-        background: #059481;
+        background: #111;
     }
 
    .title-dados {
@@ -85,4 +75,97 @@
         color: #fff;
         position: relative;
     } 
+        
+    .campo {
+        width: 70px;
+        height: 35px;
+        border: 1px solid #fff;
+        background: none;
+        border-radius: 6px;
+        outline: none;
+        padding: 0 15px;
+        font-size: 17px;
+        font-family: 'Roboto', sans-serif;
+        cursor: pointer;
+        color: #fff;
+    }
+
+    .nome {
+        width: 500px;
+    }
+
+    .cpf {
+        width: 160px;
+    }
+
+    .telefone {
+        width: 160px;
+    }
+
+    .celular {
+        width: 160px;
+    }
+
+    .rua {
+        width: 400px;
+    }
+
+    .cep {
+        width: 120px;
+    }
+
+    .cidade {
+        width: 200px;
+    }
+    
+    .bairro {
+        width: 400px;
+    }
+
+    .dtNasc {
+        width: 150px;
+    }
+
+    input::-webkit-calendar-picker-indicator{
+        display: none;
+    }
+    
+    input[type="date"]::-webkit-input-placeholder{ 
+        visibility: hidden !important;
+    }
+
+    .campo::placeholder {
+        color: #fff;
+        font-size: 18px;
+    }
+
+    .campo:active , .campo:focus {
+        border: 2px solid #fff;
+        color:#fff;
+        transition: .4s;
+    }
+
+    .text-campo {
+        font-family: 'Roboto', sans-serif;
+        font-size: 18px;
+        color: #fff;
+    }
+
+    .agendar {
+        width: 130px;
+        height: 40px;
+        font-family: 'Roboto', sans-serif;
+        font-size: 15px;
+        background-color: #fff;
+        border-radius: 6px;
+        border: 2px solid #fff;
+        cursor: pointer;
+    }
+
+    .agendar:hover {
+        background: #111;
+        color: #fff;
+        border: 3px solid #fff;
+        transform: scale(1.05);
+    }
     /*Fim Style Dados-Pessoais*/
