--- a/src/definir-horarios/view/definir-horarios.html
+++ b/src/definir-horarios/view/definir-horarios.html
@@ -13,10 +13,11 @@
             <i class="fa-solid fa-floppy-disk"></i>
         </button>
 
-    <div class="voltar">
-        <a class="link-color" href="../../../index.html"><i class="fa-solid fa-arrow-left"></i></a>
-
-    </div>
+    <a class="link-color" href="../../../index.html">
+        <div class="voltar">
+            <i class="fa-solid fa-arrow-left"></i>
+        </div>
+    </a>
    
     <div class="referencia">
         <p>Selecione o dia da semana e edite seus horarios de atendimento</p>
